# fastapi--boilerplate

./: Dockerfile  pyproject.toml
