[tool.poetry]
name = "fastapi-boilerplate"
version = "0.1.0"
description = "A fastAPI boilerplate that uses SQLModels, Poetry, TDD and much more!"
authors = ["Usman Fawad <ufawad0@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
